--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,6 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-body {
-	background-color: rgb(238, 227, 207);
-}
 .img {
 	position: relative;
 	display: flex;
@@ -23,7 +20,7 @@ body {
 .calender {
 	width: 490px;
 	height: 570px;
-	box-shadow: 0px 1px 10px 10px teal;
+	box-shadow: 0px 1px 10px 10px rgb(238, 227, 207);
 	position: absolute;
 	top: 200px;
 }
